fix header on mobile

--- a/style.css
+++ b/style.css
@@ -78,6 +78,20 @@ a:hover {
   margin-right: 14px;
 }
 
+@media screen and (max-width: 550px) {
+  .actions-public,
+  .actions-private {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .actions a:not(:last-child),
+  .actions-private__user {
+    margin-bottom: 8px;
+    margin-right: 0;
+  }
+}
+
 .loading {
   text-align: center;
   margin: 96px 0;
